Sample images on carousel

--- a/css/main.css
+++ b/css/main.css
@@ -218,3 +218,14 @@ p {
   margin: 0 auto;
   border: 1px dashed white;
 }
+
+/*==== MAIN SECTION ====*/
+
+#myCarousel {
+  margin-top: 120px!important;
+}
+
+.carousel-inner>.item>img {
+  height: 300px;
+  width: 100%;
+}
