--- a/css/main.css
+++ b/css/main.css
@@ -31,8 +31,10 @@ a:hover {
   z-index: 111;
   cursor: pointer;
   width: 100%;
+  height: 65px;
   left: 0;
   top: 0;
+  position: fixed;
 }
 
 .navT .icon {
