--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,11 @@ a:hover {
   text-decoration: none!important;
 }
 
+hr {
+  width: 50%;
+  border: solid 2px #C0B283;
+  
+}
 
 /* NAV STYLE */
 #logo {
