col-xs-12 update

--- a/css/main.css
+++ b/css/main.css
@@ -231,7 +231,7 @@ p {
 /*==== MAIN SECTION ====*/
 
 .slide {
-  width: 100%;
+  margin: 0 auto;
   height: 500px;
   background-color: #191919;
   text-align: center;
