--- a/css/main.css
+++ b/css/main.css
@@ -247,11 +247,40 @@ p {
   height: 187.5px;
   color: #fff;
   text-align: center;
+  -webkit-font-smoothing: antialiased;
+  text-rendering: optimizeLegibility;
 }
 
-.event-caption {
-  margin-top: 25%;
+.event-date {
+  padding-top: 35px;
+  font-size: 2.4rem;
+  font-weight: 800;
+  letter-spacing: 2px;
+  line-height: 2.4rem;
+  height: 30px;
 }
+
+.event-subtitle {
+  height: 50px;
+  font-weight: 300;
+  padding-top: 45px;
+  font-size: 2rem;
+}
+
+.event-reserve {
+  margin-top: 40px;
+  display: inline-block;
+  border: 1px solid rgba(255,255,255,0.5);
+  border-radius: 4px;
+  padding: 4px 6px;
+  font-size: 1.2rem;
+  font-weight: 300;
+  line-height: 1.2rem;
+  vertical-align: middle;
+  -webkit-font-smoothing: subpixel-antialiased;
+  color: #c4c7cc;
+}
+
 .event-entry-1 {
   background: url("https://images.unsplash.com/photo-1473247432547-8dad9b3c2d61?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&cs=tinysrgb&s=4b8716facb7290ccb495bc29a2bac6bf");
   background-size: cover;
