--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,10 @@ a:hover {
   text-decoration: none!important;
 }
 
+.content-wrapper {
+  width: 100%;
+}
+
 
 /* NAV STYLE */
 #logo {
@@ -142,88 +146,6 @@ a:hover {
   letter-spacing: 0;
 }
 
-.content {
-  width: 100%;
-  font-size: 20px;
-  font-family: sans-serif;
-  font-weight: 100;
-  -webkit-transition: top 0.5s;
-  position: absolute;
-  top: 65px;
-  margin: 0 auto;
-}
-.content h1 {
-  font-size: 3em;
-  text-transform: uppercase;
-  margin-top: 85px;
-  margin-left: 10px;
-}
-.content h2 {
-  font-size: 1em;
-  text-transform: uppercase;
-  margin-top: -25px;
-  margin-left: 10px;
-  font-weight: 400;
-  letter-spacing: 0.7em;
-}
-.content.shift {
-  top: 335px;
-}
-
-p {
-  max-width: 600px;
-  font-size: 0.75em;
-  line-height: 1.75em;
-  text-align: left;
-  margin-left: 10px;
-}
-
-#second {
-  left: 0;
-  width: 100%;
-  background: #999;
-  height: 600px;
-  margin-top: 200px;
-  text-align: center;
-}
-#second h1, #second h2 {
-  margin-right: 20px;
-}
-#second h1 {
-  padding-top: 40px;
-}
-#second p {
-  text-align: center;
-  margin: 0 auto;
-  margin-bottom: 20px;
-}
-
-#third {
-  background: black;
-  width: 100%;
-  height: 300px;
-  padding-top: 50px;
-}
-#third h2 {
-  color: white;
-  text-align: center;
-  margin-top: 50px;
-}
-#third h5 {
-  color: white;
-  font-family: sans-serif;
-  text-transform: uppercase;
-  font-weight: 200;
-  letter-spacing: 0.25em;
-  text-align: center;
-}
-
-#bar {
-  width: 40%;
-  height: 200px;
-  margin: 0 auto;
-  border: 1px dashed white;
-}
 
 /*==== MAIN SECTION ====*/
 
