--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,4 @@
-html {
-  background: #fff;
-}
+
 
 h1 {
   font-family: 'Lato', sans-serif;
@@ -165,16 +163,17 @@ a:hover {
   height: 187.5px;
   color: #C0B283;
   text-align: center;
-  text-rendering: optimizeLegibility;
 }
 
 .caption-bg {
-  background: #fff;
-  opacity: .8;
+  background: #191919;
+  background-size: cover;
+  opacity: .7;
   position: absolute;
-  width: 80%;
   left: 25px;
-  top: 20px;
+  top: 5px;
+  height: 100%;
+  width: 100%;
 }
 
 .event-date {
