--- a/css/main.css
+++ b/css/main.css
@@ -177,8 +177,6 @@ a:hover {
   background-color: maroon;
   color: #C0B283;
   text-align: center;
-  width: 50%;
-  float: left;
 }
 
 .event-entry-1 {
@@ -192,8 +190,9 @@ a:hover {
 .event-date {
   font-weight: 800;
   letter-spacing: 2px;
-  line-height: 2.4rem;
+  line-height: 3.4rem;
   height: 30px;
+  font-size: 2.4rem;
 
 }
 
@@ -217,4 +216,8 @@ a:hover {
   height: 20px;
   -webkit-font-smoothing: subpixel-antialiased;
   color: #C0B283;
+}
+
+.caption {
+  margin-top: 17px;
 }
