--- a/css/main.css
+++ b/css/main.css
@@ -202,6 +202,8 @@ a:hover {
   padding-top: 45px;
   font-size: 2rem;
   margin-left: 10px;
+  text-align: center;
+  letter-spacing: 2px;
 }
 
 .event-reserve {
