--- a/css/main.css
+++ b/css/main.css
@@ -94,7 +94,7 @@ a:hover {
   margin: 0 auto;
   top: 65px;
   font-size: 18px;
-  font-family: sans-serif;
+  font-family: 'Lato', sans-serif;
   font-weight: 100;
   text-transform: uppercase;
   width: 100%;
@@ -125,7 +125,6 @@ a:hover {
 }
 #menu a:hover {
   letter-spacing: 0.5em;
-  text-decoration: underline;
 }
 #menu.open {
   height: 100%;
@@ -186,20 +185,26 @@ a:hover {
 }
 
 .event-date {
-  font-weight: 800;
-  letter-spacing: 2px;
-  line-height: 3.4rem;
-  height: 30px;
-  font-size: 2.4rem;
-
+    z-index: 2;
+    height: 30px;
+    font-size: 2.4rem;
+    font-weight: 700;
+    line-height: 2.4rem;
+    letter-spacing: 2px;
+    text-align: center;
+    margin-left: 10px;
+    margin-top: 10px;
 }
 
 .event-title {
+  position: relative;
+  z-index: 2;
+  padding: 0 5px;
   height: 50px;
+  overflow: hidden;
+  font-size: 1.7rem;
   font-weight: 300;
-  padding-top: 45px;
-  font-size: 2rem;
-  margin-left: 10px;
+  line-height: 2rem;
   text-align: center;
   letter-spacing: 2px;
 }
@@ -218,8 +223,9 @@ a:hover {
   height: 35px;
   background-color: transparent;
   text-transform: uppercase;
-}
-
-.caption {
-  margin-top: 17px;
+  position: relative;
+  z-index: 2;
+  height: 30px;
+  overflow: hidden;
+  text-align: center;
 }
