changed view port width

--- a/css/main.css
+++ b/css/main.css
@@ -9,11 +9,9 @@ h1 {
 a:hover {
   text-decoration: none!important;
 }
-.wrapper {
-  width: 100%;
-}
+
 .content-wrapper {
-  width: 100%;
+  width: 370px;
 }
 
 
@@ -192,6 +190,5 @@ a:hover {
   z-index: 2;
   height: 30px;
   overflow: hidden;
-  text-align: center;
   margin-top: 120px;
 }
